fix: horizontal overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   body {
-    @apply bg-black font-sans text-gray;
+    @apply overflow-x-hidden bg-black font-sans text-gray;
   }
 
   strong {
